--- a/base/web-deployment.yaml
+++ b/base/web-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: webserver
     spec:
       containers:
-        - image: quay.tdl.devu.ca:8443/images/http-custom:latest
+        - image: quay.ebdn.ca:8443/images/http-custom:latest
           name: webserver
           ports:
             - containerPort: 8080
